starter/helloworld2.yaml
# If running minikube on Linux (WSL2 or Linux VM) with the Docker driver,
# the node IP is not externally reachable. This also results in no tunnel being created.
#
# Services with `type=LoadBalancer` can be exposed via the `minikube tunnel`command.
# Use the service external IP to reach the service.
# Run `kubectl get svc <service-name>` to get the external IP.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld2
  name: helloworld2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: helloworld2
    spec:
      containers:
      - image: kicbase/echo-server:1.0
        imagePullPolicy: IfNotPresent
        name: echo-server
        resources: {}
        # restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld2
  name: helloworld2
  namespace: default
spec:
  selector:
    app: helloworld2
  type: LoadBalancer
  ports:
  - protocol: TCP
    # nodePort: 32132
    port: 8080
    targetPort: 8080
