starter/hello-web-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-web
  name: hello-web-service
  namespace: default
spec:
  selector:
    app: hello-web
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello-web.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-web-service
                port:
                  number: 8080
